fix: background image on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -154,15 +154,27 @@ h2 span {
   background-position: right;
   background-repeat: no-repeat;
 }
-
 .work-bg {
+  background-image: none;
+}
+@media (min-width: 768px) {
+  .work-bg {
+    background-image: url("../public//infinity_logo_blured.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  .work-bg-phone {
+    background-image: none;
+  }
+}
+.work-bg-phone {
   background-image: url("../public//infinity_logo_blured.png");
-  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
-  /* height: 1250px; */
+  background-size: cover;
 }
-
 .who-bg {
   background-image: url("../public/infinity_bg_pattern.png");
   background-size: cover;
